--- a/shopp/src/components/InputSearch/inputSearch.module.scss
+++ b/shopp/src/components/InputSearch/inputSearch.module.scss
@@ -1,8 +1,24 @@
-.input {
-    outline: none;
-    padding: 0.7rem;
-    border-radius: 8px;
-    border: none;
-    box-shadow: 0px 1px #aaaaaa;
+.form {
     width: 60%;
+    display: flex;
+
+    .input {
+        outline: none;
+        padding: 0.7rem;
+        border-radius: 8px 0 0 8px;
+        border: none;
+        box-shadow: 0px 1px #aaaaaa;
+        width: 90%;
+        color: #696969;
+    }
+
+    .btn {
+        outline: none;
+        padding: 0.7rem;
+        border-radius: 0 8px 8px 0;
+        border: none;
+        box-shadow: 0px 1px #aaaaaa;
+        color: #696969;
+        background-color: var(--white);
+    }
 }
